unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_Postal_Code__c</fullName>
    <formula>Primary_Contact_Lookup__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Mailing Postal Code</label>
    <type>Text</type>
</CustomField>