unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_State__c</fullName>
    <formula>Primary_Contact_Lookup__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Mailing State</label>
    <type>Text</type>
</CustomField>