unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_Street__c</fullName>
    <formula>Primary_Contact_Lookup__r.MailingStreet</formula>
    <label>Primary Contact Mailing Street</label>
    <type>Text</type>
</CustomField>