unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Name__c</fullName>
    <formula>Primary_Contact_Lookup__r.FirstName &amp; &#39; &#39; &amp;  Primary_Contact_Lookup__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Name</label>
    <type>Text</type>
</CustomField>