unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Office_Number__c</fullName>
    <label>Primary Contact Office Number</label>
    <type>Phone</type>
</CustomField>