unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Title__c</fullName>
    <label>Primary Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>