unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Work_Phone__c</fullName>
    <formula>Primary_Contact_Lookup__r.OrderApi__Work_Phone__c</formula>
    <label>Primary Contact Work Phone</label>
    <type>Text</type>
</CustomField>