unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_R_T_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T_Number__c</fullName>
    <description>i.e. 9 digits only, no formatting</description>
    <inlineHelpText>9 digits only, no formatting</inlineHelpText>
    <label>Primary R/T Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>