unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_R_T_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_R_T_Number_Formula__c</fullName>
    <formula>Sponsored_Organization__r.Primary_R_T_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary R/T Number</label>
    <type>Text</type>
</CustomField>