unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Rate_Upload__c.field-meta.xml
<CustomField>
    <fullName>Rate_Upload__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>