unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Rules_Access__c.field-meta.xml
<CustomField>
    <fullName>Rules_Access__c</fullName>
    <label>Rules Access?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>