unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Same_as_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Mailing_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Same as Mailing Address</label>
    <type>Checkbox</type>
</CustomField>