unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/SM_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>SM_Coordinator_Email__c</fullName>
    <inlineHelpText>The email of the SM Coordinator who is creating and reviewing the Sponsoring Agreement</inlineHelpText>
    <label>SM Coordinator Email</label>
    <type>Email</type>
</CustomField>