unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/SM_Coordinator_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>SM_Coordinator_Full_Name__c</fullName>
    <description>This is the individual with the Parent Account who initiated the Sponsoring Relationship record</description>
    <inlineHelpText>This is the individual with the Parent Account who initiated the Sponsoring Relationship record</inlineHelpText>
    <label>SM Coordinator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>