unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Sponsored_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Account_Name__c</fullName>
    <formula>Sponsored_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsored Account Name</label>
    <type>Text</type>
</CustomField>