unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Sponsored_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sponsored Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sponsoring_Relationships1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>