unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Sponsored_Tiered_Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_Tiered_Annual_Dues__c</fullName>
    <formula>IF(Sponsored_Organization__r.Total_Deposits__c  &lt;= 10000000, VALUE(&quot;25&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 10000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 25000000 , VALUE(&quot;50&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 25000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 50000000, VALUE(&quot;75&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 50000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 100000000, VALUE(&quot;100&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 100000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 500000000, VALUE(&quot;200&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 500000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 1000000000, VALUE(&quot;750&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 1000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 5000000000, VALUE(&quot;2000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 5000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 20000000000, VALUE(&quot;7000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 20000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 60000000000, VALUE(&quot;20000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 60000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 100000000000, VALUE(&quot;40000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 100000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 150000000000, VALUE(&quot;75000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 150000000001 &amp;&amp; Sponsored_Organization__r.Total_Deposits__c  &lt;= 200000000000,VALUE(&quot;100000&quot;),
IF(Sponsored_Organization__r.Total_Deposits__c  &gt;= 200000000001, VALUE(&quot;120000&quot;), null
)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsored Tiered Annual Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>