unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Sponsoring_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_Organization__c</fullName>
    <label>Sponsoring Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sponsoring_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>