unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Sponsoring_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsoring_Organization_Name__c</fullName>
    <formula>Sponsoring_Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsoring Organization</label>
    <type>Text</type>
</CustomField>