unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/State_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>State_Picklist_Values__c</fullName>
    <label>State Picklist Values</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_Picklist_Values__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>US_and_Canada_States</valueSetName>
    </valueSet>
</CustomField>