unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application in Process</fullName>
                <default>true</default>
                <label>Application in Process</label>
            </value>
            <value>
                <fullName>Submitted to Sponsored Org Account for Review</fullName>
            </value>
            <value>
                <fullName>Submitted to Sponsoring Account for Final Review</fullName>
                <label>Submitted to Sponsoring Org for Final Review</label>
            </value>
            <value>
                <fullName>Final Approval by Sponsor</fullName>
            </value>
            <value>
                <fullName>Final Review by ECCHO Staff</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending Drop</fullName>
            </value>
            <value>
                <fullName>Expired/Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>