unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Upload_ID__c.field-meta.xml
<CustomField>
    <fullName>Upload_ID__c</fullName>
    <label>Upload ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>