unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Virtual_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Agreement_URL__c</fullName>
    <formula>&#39;https://www.ecchoonline.org/s/agreement?srid=&#39;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Virtual Agreement URL</label>
    <type>Text</type>
</CustomField>