unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Volume_Upload__c.field-meta.xml
<CustomField>
    <fullName>Volume_Upload__c</fullName>
    <description>calculated from SPwithVolume apex</description>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>