unpackaged/main/default/objects/Sponsoring_Relationships__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Primary_R_T_Number__c</columns>
    <columns>NAME</columns>
    <columns>Sponsoring_Organization__c</columns>
    <columns>Sponsored_Organization__c</columns>
    <columns>Date_Accepted_by_ECCHO__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Type_Item_or_Deposit__c</columns>
    <columns>Billing_Quarter__c</columns>
    <columns>Invoice_Timing__c</columns>
    <columns>PO_ID__c</columns>
    <columns>Agreement_Document_URL__c</columns>
    <columns>Agreement_URL__c</columns>
    <columns>Agreement_URL_Coordinator__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Tanya Renne</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>