unpackaged/main/default/objects/Sponsoring_Relationships__c/listViews/Archived_Sponsored_Members.listView-meta.xml
<ListView>
    <fullName>Archived_Sponsored_Members</fullName>
    <columns>Primary_R_T_Number__c</columns>
    <columns>NAME</columns>
    <columns>Sponsoring_Organization__c</columns>
    <columns>Sponsored_Organization__c</columns>
    <columns>Date_Accepted_by_ECCHO__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Type_Item_or_Deposit__c</columns>
    <columns>Billing_Quarter__c</columns>
    <columns>Invoice_Timing__c</columns>
    <columns>is_First_Year__c</columns>
    <columns>Executed_By_Lookup__c</columns>
    <columns>Executed_By_Title__c</columns>
    <columns>Fixed_Dues_Calculation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired/Terminated</value>
    </filters>
    <label>Archived Sponsored Members</label>
</ListView>