unpackaged/main/default/objects/Sponsoring_Relationships__c/listViews/First_Time_To_Bill.listView-meta.xml
<ListView>
    <fullName>First_Time_To_Bill</fullName>
    <columns>NAME</columns>
    <columns>Sponsoring_Organization__c</columns>
    <columns>Membership_Start_Date_Formatted__c</columns>
    <columns>is_First_Year__c</columns>
    <columns>Sponsored_Organization__c</columns>
    <columns>Primary_R_T_Number_Formula__c</columns>
    <columns>Billing_Type_Item_or_Deposit__c</columns>
    <columns>Billing_Quarter__c</columns>
    <columns>In_Production__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Primary_Contact_Lookup__c</columns>
    <columns>SM_Coordinator_Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>is_First_Year__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>First Time To Bill</label>
</ListView>