unpackaged/main/default/objects/Sponsoring_Relationships__c/listViews/Home_Page_View_of_Items.listView-meta.xml
<ListView>
    <fullName>Home_Page_View_of_Items</fullName>
    <columns>Primary_R_T_Number__c</columns>
    <columns>Sponsoring_Organization__c</columns>
    <columns>Sponsored_Organization__c</columns>
    <columns>Date_Accepted_by_ECCHO__c</columns>
    <columns>Status__c</columns>
    <columns>Volume_Upload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Type_Item_or_Deposit__c</field>
        <operation>equals</operation>
        <value>Item Based</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>In_Production__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Sponsoring_Organization__c</field>
        <operation>equals</operation>
        <value>Synergent</value>
    </filters>
    <label>Home Page View of Items</label>
</ListView>